--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "express": "^4.6.1",
     "gulp": "^3.8.6",
+    "gulp-autoprefixer": "0.0.8",
     "gulp-csso": "^0.2.9",
     "gulp-less": "^1.3.2",
     "gulp-load-plugins": "^0.5.3",
