--- a/bower.json
+++ b/bower.json
@@ -7,12 +7,5 @@
   ],
   "description": "ksmithut's personal blog/portfolio website",
   "license": "MIT",
-  "private": true,
-  "ignore": [
-    "**/.*",
-    "node_modules",
-    "bower_components",
-    "test",
-    "tests"
-  ]
+  "private": true
 }
