--- a/package.json
+++ b/package.json
@@ -15,15 +15,25 @@
   "bugs": {
     "url": "https://github.com/ksmithut/ksmithut.github.io/issues"
   },
+  "private": true,
   "homepage": "https://github.com/ksmithut/ksmithut.github.io",
   "devDependencies": {
-    "express": "^4.6.1",
-    "gulp": "^3.8.6",
-    "gulp-autoprefixer": "0.0.8",
-    "gulp-combine-media-queries": "^0.1.0",
-    "gulp-csso": "^0.2.9",
-    "gulp-less": "^1.3.2",
-    "gulp-load-plugins": "^0.5.3",
-    "gulp-util": "^3.0.0"
+    "bower-files": "^2.0.0",
+    "configly": "^2.0.0",
+    "glob": "^4.0.6",
+    "gulp": "^3.8.8",
+    "gulp-concat": "^2.4.1",
+    "gulp-data": "^1.0.2",
+    "gulp-front-matter": "^1.0.0",
+    "gulp-gzip": "0.0.8",
+    "gulp-htmlmin": "^0.2.0",
+    "gulp-less": "^1.3.6",
+    "gulp-load-plugins": "^0.6.0",
+    "gulp-marked": "^0.2.0",
+    "gulp-pleeease": "^1.0.4",
+    "gulp-sourcemaps": "^1.2.2"
+  },
+  "dependencies": {
+    "gulp-jade": "^0.8.0"
   }
 }
