--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,6 @@
   "private": true,
   "dependencies": {
     "fastclick": "~1.0.3",
-    "normalize-css": "~3.0.1"
+    "bootstrap": "~3.2.0"
   }
 }
