--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "ksmithut's personal blog/portfolio website",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "deploy": "git subtree push --prefix dist origin master"
   },
   "repository": {
@@ -18,31 +17,8 @@
   },
   "private": true,
   "homepage": "https://github.com/ksmithut/ksmithut.github.io",
-  "devDependencies": {
-    "bower-files": "^2.0.0",
-    "configly": "^2.0.0",
-    "connect": "^3.2.0",
-    "defaults": "^1.0.0",
-    "glob": "^4.0.6",
-    "gulp": "^3.8.8",
-    "gulp-concat": "^2.4.1",
-    "gulp-data": "^1.0.2",
-    "gulp-front-matter": "^1.0.0",
-    "gulp-htmlmin": "^0.2.0",
-    "gulp-jade": "^0.8.0",
-    "gulp-less": "^1.3.6",
-    "gulp-livereload": "^2.1.1",
-    "gulp-load-plugins": "^0.7.0",
-    "gulp-markdown": "^1.0.0",
-    "gulp-pleeease": "^1.0.4",
-    "gulp-rename": "^1.2.0",
-    "gulp-sourcemaps": "^1.2.2",
-    "gulp-template": "^1.1.0",
-    "gulp-uglify": "^1.0.1",
-    "gulp-util": "^3.0.1",
-    "inquirer": "^0.8.0",
-    "moment": "^2.8.3",
-    "serve-static": "^1.6.3",
-    "through": "^2.3.6"
+  "devDependencies": {},
+  "dependencies": {
+    "react": "^0.11.2"
   }
 }
