--- a/package.json
+++ b/package.json
@@ -17,9 +17,19 @@
   },
   "private": true,
   "homepage": "https://github.com/ksmithut/ksmithut.github.io",
-  "devDependencies": {},
+  "devDependencies": {
+    "browserify": "^6.2.0",
+    "gulp": "^3.8.9",
+    "gulp-load-plugins": "^0.7.0",
+    "gulp-uglify": "^1.0.1",
+    "reactify": "^0.14.0",
+    "uglifyify": "^2.5.0",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.0.0"
+  },
   "dependencies": {
+    "flux": "^2.0.1",
     "react": "^0.11.2",
-    "url-pattern": "^0.6.0"
+    "react-router": "^0.9.4"
   }
 }
