--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,6 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "fastclick": "~1.0.3",
-    "bootstrap": "~3.2.0"
+    "fastclick": "~1.0.3"
   }
 }
