--- a/package.json
+++ b/package.json
@@ -20,29 +20,29 @@
   "homepage": "https://github.com/ksmithut/ksmithut.github.io",
   "devDependencies": {
     "bower-files": "^2.0.0",
-    "configly": "^2.0.0",
-    "connect": "^3.2.0",
-    "defaults": "^1.0.0",
-    "glob": "^4.0.6",
-    "gulp": "^3.8.8",
+    "gulp": "^3.8.9",
     "gulp-concat": "^2.4.1",
-    "gulp-data": "^1.0.2",
     "gulp-front-matter": "^1.0.0",
-    "gulp-htmlmin": "^0.2.0",
-    "gulp-jade": "^0.8.0",
-    "gulp-less": "^1.3.6",
-    "gulp-livereload": "^2.1.1",
     "gulp-load-plugins": "^0.7.0",
-    "gulp-markdown": "^1.0.0",
+    "gulp-minify-html": "^0.1.6",
     "gulp-pleeease": "^1.0.4",
-    "gulp-rename": "^1.2.0",
-    "gulp-sourcemaps": "^1.2.2",
-    "gulp-template": "^1.1.0",
+    "gulp-plumber": "^0.6.6",
+    "gulp-sourcemaps": "^1.2.4",
+    "gulp-stylus": "^1.3.3",
     "gulp-uglify": "^1.0.1",
-    "gulp-util": "^3.0.1",
-    "inquirer": "^0.8.0",
-    "moment": "^2.8.3",
-    "serve-static": "^1.6.3",
-    "through": "^2.3.6"
+    "gulpsmith": "^0.5.2",
+    "handlebars": "^2.0.0",
+    "handlebars-helper": "0.0.12",
+    "load-metalsmith-plugins": "^0.1.0",
+    "metalsmith-build-date": "^0.1.0",
+    "metalsmith-collections": "^0.6.0",
+    "metalsmith-collections-paginate": "^1.0.0",
+    "metalsmith-drafts": "0.0.1",
+    "metalsmith-excerpts": "^1.0.0",
+    "metalsmith-glob-meta": "^0.0.0",
+    "metalsmith-markdown": "^0.2.1",
+    "metalsmith-permalinks": "^0.4.0",
+    "metalsmith-templates": "^0.6.0",
+    "nib": "^1.0.4"
   }
 }
