--- a/package.json
+++ b/package.json
@@ -36,10 +36,10 @@
     "load-metalsmith-plugins": "^0.1.0",
     "metalsmith-build-date": "^0.1.0",
     "metalsmith-collections": "^0.6.0",
-    "metalsmith-collections-paginate": "^1.0.0",
+    "metalsmith-collections-paginate": "^1.0.1",
     "metalsmith-drafts": "0.0.1",
     "metalsmith-excerpts": "^1.0.0",
-    "metalsmith-glob-meta": "^0.0.0",
+    "metalsmith-glob-meta": "0.0.1",
     "metalsmith-markdown": "^0.2.1",
     "metalsmith-permalinks": "^0.4.0",
     "metalsmith-templates": "^0.6.0",
