--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   "homepage": "https://github.com/ksmithut/ksmithut.github.io",
   "devDependencies": {
     "bower-files": "^2.0.0",
+    "connect": "^3.3.2",
     "gulp": "^3.8.9",
     "gulp-concat": "^2.4.1",
     "gulp-front-matter": "^1.0.0",
+    "gulp-livereload": "^2.1.1",
     "gulp-load-plugins": "^0.7.0",
     "gulp-minify-html": "^0.1.6",
     "gulp-pleeease": "^1.0.4",
@@ -44,5 +46,8 @@
     "metalsmith-permalinks": "^0.4.0",
     "metalsmith-templates": "^0.6.0",
     "nib": "^1.0.4"
+  },
+  "dependencies": {
+    "serve-static": "^1.7.1"
   }
 }
