--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,21 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "fastclick": "~1.0.3"
+    "fastclick": "~1.0.3",
+    "normalize-css": "~3.0.2",
+    "bootstrap": "~3.3.0"
+  },
+  "ignore": [],
+  "overrides": {
+    "bootstrap": {
+      "main": [
+        "dist/css/bootstrap.css",
+        "dist/fonts/glyphicons-halflings-regular.eot",
+        "dist/fonts/glyphicons-halflings-regular.svg",
+        "dist/fonts/glyphicons-halflings-regular.ttf",
+        "dist/fonts/glyphicons-halflings-regular.woff"
+      ],
+      "dependencies": {}
+    }
   }
 }
