--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "private": true,
   "homepage": "https://github.com/ksmithut/ksmithut.github.io",
   "devDependencies": {
-    "bower-files": "^2.0.0",
+    "bower-files": "^2.1.0",
     "connect": "^3.3.2",
     "gulp": "^3.8.9",
     "gulp-concat": "^2.4.1",
@@ -35,7 +35,8 @@
     "gulpsmith": "^0.5.2",
     "handlebars": "^2.0.0",
     "handlebars-helper": "0.0.12",
-    "load-metalsmith-plugins": "^0.1.0",
+    "load-metalsmith-plugins": "^0.1.1",
+    "metalsmith": "^1.0.1",
     "metalsmith-build-date": "^0.1.0",
     "metalsmith-collections": "^0.6.0",
     "metalsmith-collections-paginate": "^1.0.1",
@@ -45,9 +46,7 @@
     "metalsmith-markdown": "^0.2.1",
     "metalsmith-permalinks": "^0.4.0",
     "metalsmith-templates": "^0.6.0",
-    "nib": "^1.0.4"
-  },
-  "dependencies": {
+    "nib": "^1.0.4",
     "serve-static": "^1.7.1"
   }
 }
