--- a/package.json
+++ b/package.json
@@ -1,52 +1,47 @@
 {
   "name": "ksmithut.github.io",
   "version": "0.0.0",
-  "description": "ksmithut's personal blog/portfolio website",
+  "private": true,
+  "description": "ksmithut's portfolio website",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy": "git subtree push --prefix dist origin master"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/ksmithut/ksmithut.github.io.git"
+    "test": "mocha",
+    "deploy": "git subtree push --prefix dist origin master",
+    "build": "gulp build",
+    "watch": "gulp watch"
   },
   "author": "ksmithut",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/ksmithut/ksmithut.github.io/issues"
-  },
-  "private": true,
-  "homepage": "https://github.com/ksmithut/ksmithut.github.io",
   "devDependencies": {
-    "bower-files": "^2.1.0",
-    "connect": "^3.3.2",
-    "gulp": "^3.8.9",
-    "gulp-concat": "^2.4.1",
+    "express": "^4.10.4",
+    "gulp": "^3.8.10",
+    "gulp-concat": "^2.4.2",
     "gulp-front-matter": "^1.0.0",
     "gulp-livereload": "^2.1.1",
-    "gulp-load-plugins": "^0.7.0",
-    "gulp-minify-html": "^0.1.6",
-    "gulp-pleeease": "^1.0.4",
+    "gulp-load-plugins": "^0.7.1",
+    "gulp-pleeease": "^1.1.0",
     "gulp-plumber": "^0.6.6",
-    "gulp-sourcemaps": "^1.2.4",
-    "gulp-stylus": "^1.3.3",
+    "gulp-sourcemaps": "^1.2.8",
+    "gulp-stylus": "^1.3.4",
+    "gulp-task-master": "0.3.0",
     "gulp-uglify": "^1.0.1",
+    "gulp-util": "^3.0.1",
     "gulpsmith": "^0.5.2",
-    "handlebars": "^2.0.0",
-    "handlebars-helper": "0.0.12",
+    "jade": "^1.8.1",
     "load-metalsmith-plugins": "^0.1.1",
     "metalsmith": "^1.0.1",
+    "metalsmith-branch": "0.0.4",
     "metalsmith-build-date": "^0.1.0",
     "metalsmith-collections": "^0.6.0",
-    "metalsmith-collections-paginate": "^1.0.1",
+    "metalsmith-define": "^1.0.0",
     "metalsmith-drafts": "0.0.1",
-    "metalsmith-excerpts": "^1.0.0",
-    "metalsmith-glob-meta": "0.0.1",
+    "metalsmith-filemetadata": "0.0.4",
     "metalsmith-markdown": "^0.2.1",
+    "metalsmith-pagination": "^1.0.0",
     "metalsmith-permalinks": "^0.4.0",
     "metalsmith-templates": "^0.6.0",
-    "nib": "^1.0.4",
-    "serve-static": "^1.7.1"
+    "metalsmith-validate": "^0.1.3",
+    "metalsmith-word-count": "0.0.4",
+    "mocha": "^2.0.1"
   }
 }
