got gulp tasks back on track and started writing basic styles

--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
   "author": "ksmithut",
   "license": "MIT",
   "devDependencies": {
+    "bower-files": "^2.2.1",
     "express": "^4.10.4",
     "gulp": "^3.8.10",
     "gulp-concat": "^2.4.2",
     "gulp-front-matter": "^1.0.0",
     "gulp-livereload": "^2.1.1",
-    "gulp-load-plugins": "^0.7.1",
+    "gulp-load-plugins": "^0.8.0",
     "gulp-pleeease": "^1.1.0",
     "gulp-plumber": "^0.6.6",
     "gulp-sourcemaps": "^1.2.8",
@@ -33,7 +34,6 @@
     "metalsmith-branch": "0.0.4",
     "metalsmith-build-date": "^0.1.0",
     "metalsmith-collections": "^0.6.0",
-    "metalsmith-define": "^1.0.0",
     "metalsmith-drafts": "0.0.1",
     "metalsmith-filemetadata": "0.0.4",
     "metalsmith-markdown": "^0.2.1",
